# StructBench

./: .gitattributes  .gitignore  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CORRECTIONS.md  HARNESS.md  PRINCIPLES.md  README.md  ROADMAP.md  VISION.md  pyproject.toml
.superpowers/sdd/: task-7-report.md
configs/: notch_bend.toml  notch_bend_smoke.toml  notch_impact.toml  notch_impact_smoke.toml  taylor_2d.toml  taylor_2d_smoke.toml  wave_1d.toml  wave_1d_smoke.toml
configs/notch_beam_2d_bend/: cgn.toml  cgn_smoke.toml  gns.toml  gns_smoke.toml
configs/notch_beam_2d_impact/: cgn.toml  cgn_smoke.toml  gns.toml  gns_smoke.toml
configs/taylor_impact_2d/: cgn.toml  cgn_smoke.toml  gns.toml  gns_smoke.toml
configs/wave_propagation_1d/: cgn.toml  (+3 more)
data_generation/: README.md
decisions/: 0001-adopt-harness-engineering.md  0002-project-name-structbench.md  0003-v01-anchor-problem-rc-beam-impact.md  0004-solver-agnostic-platform.md  0005-adr-format.md  0006-three-tier-authority-model.md  0007-corrections-log-mechanism.md  0008-harness-claude-separation.md  0009-session-start-reading-list.md  0010-fem-solver-outside-package.md  0011-case-vocabulary.md  0012-case-schema-fields.md  0013-hdf5-persistence-layout.md  0014-substrate-layer-boundary.md  0015-v01-portfolio-of-existing-datasets.md  0016-lsdyna-d3plot-canonical-ingestion.md  0017-physicsnemo-interop-posture.md  0018-ml-stack-hard-runtime-dependencies.md  0019-taylor-2d-benchmark-definition.md  0020-native-radius-graph.md  0021-v01-narrows-to-taylor.md  0022-fem-style-visualization-harness.md  0022-v02-wave-and-notch-beam-scope.md  0023-git-authority-on-instruction.md  0023-wave-1d-benchmark-definition.md  0024-gns-training-recipe-rework.md  0024-notch-beam-2d-benchmark-pair.md  0024-v02-wave-and-notch-beam-scope.md  0025-benchmark-cards.md  0025-wave-1d-benchmark-definition.md  0026-notch-beam-2d-benchmark-pair.md  0027-benchmark-cards.md  0028-gns-training-recipe-rework.md  0029-notch-aux-max-principal-strain.md  0030-concrete-beam-decks-kg-mm-ms.md  0031-data-archive-hosting-layout.md  0031-taylor-baseline-reference-capacity.md  0032-grouped-config-and-protocol-governance.md  0033-baseline-results-registry.md  0034-cgn-baseline-identity.md  (+4 more)
docs/: ARCHITECTURE.md  CORRECTIONS.md  PRINCIPLES.md  WORKFLOW.md  benchmarks.md
tests/: test_pipeline_smoke.py  test_torch_free_core.py
tools/: gen_benchmark_docs.py
(+108 files in other folders)
