[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "structbench"
version = "0.1.0.dev0"
description = "An open platform for data-driven structural engineering."
readme = "VISION.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Qilin Li" }]
dependencies = [
    "numpy>=1.26",
    "h5py>=3.10",
    "lasso-python>=2.0",
    "torch>=2.0",
    "torch-geometric>=2.3",
]

[project.scripts]
structbench-train = "structbench.cli.train:main"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
structbench = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["structbench"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["h5py.*", "lasso.*", "torch_geometric.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
